cmake_minimum_required (VERSION 2.8.11)
project (week01)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED )
#add_executable (move_zeros  lc-283_move-zeros.cpp)
#target_link_libraries (move_zeros LINK_PUBLIC week01)

add_executable (trapping_rain_water  trapping_rain_water.cpp)
#target_link_libraries (plusone LINK_PUBLIC week01)