cmake_minimum_required (VERSION 2.8.11)
project (week08)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED )
#add_executable (move_zeros  lc-283_move-zeros.cpp)
#target_link_libraries (move_zeros LINK_PUBLIC week01)

add_executable (note note.cpp)
add_executable (52_totalN_Queens 52_totalN_Queens.cpp)
add_executable (51_N_Queen 51_N_Queen.cpp)
add_executable (bubble_sort_template bubble_sort_template.cpp)
add_executable (Selection_Sort_template Selection_Sort_template.cpp)
add_executable (Insetion_Sort_template Insetion_Sort_template.cpp)
add_executable (493_Reverse_Pair 493_Reverse_Pair.cpp)
add_executable(242_isAnagram 242_isAnagram.cpp)
