cmake_minimum_required (VERSION 2.8.11)
project (week09)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED )
#add_executable (move_zeros  lc-283_move-zeros.cpp)
#target_link_libraries (move_zeros LINK_PUBLIC week01)

add_executable (387_firstuniquechar 387_firstuniquechar.cpp)
add_executable(541_reverseStr 541_reverseStr.cpp)
add_executable(151_reverseWords 151_reverseWords.cpp)
add_executable(917_reverseOnlyLetters 917_reverseOnlyLetters.cpp)
add_executable(205_isIosmorphic 205_isIosmorphic.cpp)
add_executable(680_validPalindrome 680_validPalindrome.cpp)
add_executable(8_myAtoi 8_myAtoi.cpp)